# Convolution

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  FindVulkan.cmake  README.md
.github/workflows/: cmake-multi-platform.yml
Libraries/VulkanSDK/1.3.224.1/: InstallationLog.txt  components.xml  maintenancetool.ini
Modules/: FindDIRECTXMATH.cmake  FindEASTL.cmake  FindGLFW3.cmake  FindIMGUI.cmake  FindVulkan.cmake
Scripts/: CompileShaders.bat  CopyShaders.bat  CopyTextures.bat
Shaders/Globals/: BindingSlots.h  Bindless.h  ClusterLightData.h  ClusteredShading.h  Common.h  Constants.h  DebugFlags.h  DebugPrintf.h  DisneyPBR.h  DrawBuildBuffers.h  GBuffer.h  GBufferOutput.h  GBufferPass.h  GBufferUBO.h  GeometryHelpers.h  GeometryPassData.h  GlobalBuffers.h  Images.h  IndirectDrawStructs.h  LastFrameData.h  LightData.h  LightingPass.h  Material.h  MaterialHelpers.h  PerObjectBuffers.h  PushConstants.h  RT.h  SMAA.hlsl  SMAA_Common.h  Scene.h  ShadowBuffers.h  Textures.h  Tonemapping.h  Types.h  UnrealPBR.h
Shaders/Globals/ClusteredShading/: AABBs.h  LightIndexIO.h  ViewSpaceLights.h
Shaders/Globals/GBuffer/: GBufferSampling.h  Output.h
Shaders/Globals/PBR/: DisneyPBR.h  UnrealPBR.h
Shaders/Globals/Shadows/: Data.h  ShadowSampling.h
Shaders/Globals/Tonemapping/: GT7.h  GT7_Utils.h  Tonemapping.h
Shaders/Globals/Utils/: InstanceUtils.h  Math.h  ScreenSpace.h  Shadows.h
Shaders/Uncompiled/AA/: SMAABlend.frag  SMAABlend.vert  SMAAEdge.frag  SMAAEdge.vert  SMAANeighborhood.frag  SMAANeighborhood.vert  TAA.comp  TAAHistoryDebug.comp  TemporalTonemap.comp
Shaders/Uncompiled/AO/: SSAO.comp
Shaders/Uncompiled/Basic/: Dummy.frag  Dummy.vert  Simple.frag  Simple.vert  SimpleForward.frag  SimpleForward.vert
Shaders/Uncompiled/ClusteredShading/: ClusterDebug.vert  ClusterGenerator.comp  ClusteredLightCulling.comp  LightTransform.comp  TileLightAssignment.comp
Shaders/Uncompiled/Common/: DepthPass.frag  Dummy.vert
Shaders/Uncompiled/Composit/: CompositPass.frag  CompositPass.vert
Shaders/Uncompiled/Compute/: ClusteredLightCulling.comp
Shaders/Uncompiled/Culling/: FrustumCulling.comp
Shaders/Uncompiled/Debug/: Debug.frag  Debug.vert
Shaders/Uncompiled/Deferred/: GBufferPass.frag  GBufferPass.vert  LightingPass.comp  LightingPass.frag  LightingPass.vert  OpaqueBase.frag  OpaqueBase.vert
Shaders/Uncompiled/RT/: RTAO.comp  RTComposite.comp  RTComposite.frag  RTDebugView.comp  RTReflections.comp
Shaders/Uncompiled/Shadows/: CSM.vert  DirLightCSM.frag  DirLightCSM.vert  ScreenSpaceShadows.comp
Src/: Boot.cpp  ImGuiCompatibility.h  PCH.h
Src/Core/: Application.cpp  Application.h  ConsoleLogger.cpp  ConsoleLogger.h  RenderThread.cpp  RenderThread.h  TimeData.h  WindowManager.cpp  WindowManager.h
Src/Core/ECS/: Component.h  ComponentDefines.h  Entity.h  EntityManager.cpp  EntityManager.h  RenderComponent.h
Src/Core/ECS/Components/: Camera.h  Component.h  DebugRenderComponent.h  Hierarchy.h  Light.h  RenderComponent.h  Transform.cpp  Transform.h  View.h
Src/Core/ECS/Systems/: SAABB.cpp  SAABB.h  SClusterAABB.cpp  SClusterAABB.h  SDebugDisplay.cpp  SDebugDisplay.h  SLight.cpp  SLight.h  STransform.cpp  STransform.h  System.h
Src/Core/Events/: ApplicationEvents.h  EventSystem.h  EventUtils.h  EventsBase.h  InputEvents.h
Src/Core/Global/: CommonGlobals.h  CoreCommon.h  EASTLFormatters.h  EnumHelpers.h  FrameGlobals.h  GlobalDefines.h  GlobalVariables.cpp  GlobalVariables.h  GobalVariables.cpp  LogDefines.h  LogHelpers.cpp  MemoryManager.h  Profiling.h  ThreadBase.cpp  ThreadBase.h  ThreadPool.cpp  ThreadPool.h  Typedefs.h
Src/Core/Global/State/: ApplicationState.cpp  ApplicationState.h  States.h
Src/Core/Global/Utils/: EnumHelpers.h  MathFunctions.h  SimpleMath.cpp
Src/Core/IO/: FileReader.cpp  FileReader.h  MeshConverter.cpp  MeshConverter.h
Src/Core/Input/: InputManager.cpp  InputManager.h
Src/Core/Memory/: MemoryManager.cpp  MemoryManager.h  MemoryStructs.h  ResourceManager.h  Singleton.h
Src/Core/Rendering/: LayerDefines.h  RenderInformation.h  RenderLayer.cpp  RenderLayer.h
Src/Core/Rendering/Backend/: BackendDefines.h  RenderBackend.h  RenderBackendBase.h  VulkanBackend.cpp  VulkanBackend.h
Src/Core/Rendering/Core/: AABB.h  APITraits.h  AccelerationStructure.h  Attachment.h  BindingSlots.h  BindlessTexturesDefines.h  Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorLayoutDefines.h  DescriptorPool.h  DescriptorSetLayout.h  FrameResourceManager.cpp  FrameResourceManager.h  FrameTransitionRecorder.cpp  FrameTransitionRecorder.h  GBuffer.h  GPUMemoryManager.h  GPUTimingQuery.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MemoryBarrier.cpp  MemoryBarrier.h  Pipeline.cpp  Pipeline.h  Profiler.h  ProfilingUtils.h  RenderDefinitions.h  RenderPass.h  RenderTargetManager.cpp  RenderTargetManager.h  RenderTextureImGuiRegistry.cpp  RenderTextureImGuiRegistry.h  RenderTraitsMacros.h  RenderingData.h  RenderingForwardDecls.h  RenderingIncludes.h  RenderingTypeDefs.h  (+17 more)
Src/Core/Rendering/Passes/: DebugShapePass.cpp  DebugShapePass.h  FrameResourceManager.cpp  FrameResourceManager.h  GBuffer.h  GenericGeometryPass.cpp  GenericGeometryPass.h  ImGuiPass.cpp  ImGuiPass.h  LightResourceManager.h  PassManager.cpp  PassManager.h  PassManagerDefines.h  RenderPass.cpp  RenderPass.h  ScreenSpaceShadowPass.cpp  ScreenSpaceShadowPass.h  ScreenSpaceShadowsHelper.h  ShadowPass.cpp  ShadowPass.h  ShadowPassSimple.cpp  StaticForwardMeshPass.cpp  StaticMeshPass.cpp  StaticMeshPass.h
Src/Core/SceneGraph/: Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
Src/Core/UI/: LogData.cpp  LogData.h  Logger.h  RenderDebugUI.cpp  RenderDebugUI.h  UIData.cpp  UIData.h  UIManager.cpp  UIManager.h
Src/Scenes/: BistroExteriorScene.h  ClusteredLightingScene.h  SampleScene.h  SponzaScene.h
Src/StaticBehaviors/: StaticBehaviorCollection.h
Src/StaticBehaviors/Input/: EntitySelector.cpp  EntitySelector.h  SelectedEntityMover.cpp  SelectedEntityMover.h
Src/Utils/: MemoryUtilities.cpp  MemoryUtilities.h
(+149 files in other folders)
